--- a/style.css
+++ b/style.css
@@ -1,18 +1,87 @@
 body{
   background-color: #4a708b;
+
+}
+
+#topSection{
+  width: 100%;
+  margin-top: 10px;
+  /* margin-bottom: 10px; */
+}
+
+#bottomSection{
+  width: 1000px;
+  background-color: #ffcc33;
+  margin: auto;
+}
+
+#container{
+  text-align: center;
+}
+
+#attributesBox{
+  /* background-color: black; */
+  width: 480px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  float: left;
+  margin-right: 20px;
+}
+
+#attributesFirstHalf{
+  width: 230px;
+  float: left;
+  margin-right: 20px;
+}
+
+
+
+#attributesSecondHalf{
+  width: 230px;
+  float: left;
+}
+
+#aboutSection{
+  /* background-color: black; */
+  margin-top: 10px;
+  margin-bottom: 10px;
+  float: left;
+  width: 500px;
+}
+
+#checkboxbox{
+  /* text-align: center; */
+  /* font-family: "Veranda", sans-serif; */
+}
+
+p{
+  color: #ffffff;
+  /* text-align: center; */
+  /* word-spacing: 2px; */
+  /* margin-left: auto%;
+  margin-right: auto%; */
+  margin-bottom: 2px;
+  margin-top: 2px;
+  font-family: "Veranda", sans-serif;
+  text-shadow: 1.05px 1.5px #000000;
+}
+
+
+a{
+  color: #ff6961;
+  text-decoration: none;
 }
 
 h1{
   color: 	#ffffff;
   text-align: center;
-  /* word-spacing: 10px; */
   font-size: 25pt;
   margin-bottom: 10px;
   margin-top: 10px;
   font-family: "Veranda", sans-serif;
-  /* text-decoration: underline; */
-  background-color: #000000;
-  text-shadow: 2px 2px #000000;
+  text-shadow: 1.4px 2px #000000;
+  letter-spacing: 18px;
+  word-spacing: 3px;
 
 }
 
@@ -22,41 +91,16 @@ h2{
   /* word-spacing: 10px; */
   font-size: 23pt;
   margin-bottom: 10px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   font-family: "Veranda", sans-serif;
-  /* text-decoration: underline; */
-  background-color: black;
-  text-shadow: 2px 2px #000000;
-}
-
-p{
-  color: #ffffff;
-  text-align: center;
-  /* word-spacing: 2px; */
-
-  margin-left: auto%;
-  margin-right: auto%;
-  margin-bottom: 2px;
-  margin-top: 2px;
-  font-family: "Veranda", sans-serif;
-  text-shadow: 2px 2px #000000;
-}
-
-#container{
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-#checkboxbox{
-  text-align: center;
-  margin-bottom: 10px;
-  font-family: "Veranda", sans-serif;
+  text-decoration: underline;
   /* background-color: black; */
+  text-shadow: 1.4px 2px #000000;
+  /* letter-spacing: 5px; */
 }
 
 h3{
-  /* background-color: black; */
-  text-align: center;
+  /* text-align: center; */
   font-family: "Veranda", sans-serif;
   font-size: 16pt;
   text-shadow: 2px 2px #000000;
@@ -64,122 +108,88 @@ h3{
 
 h4{
   font-family: "Veranda", sans-serif;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   color: #ffffff;
-  text-align: center;
-  text-shadow: 2px 2px #000000;
+  text-align: left;
+  text-shadow: 1.4px 2px #000000;
+  font-size: 8pt;
 }
 
+h5{
+  font-family: "Veranda", sans-serif;
+  margin-bottom: 10px;
+  color: red;
+  text-align: center;
+  text-shadow: 1.4px 2px #000000;
+}
+
+h6{
+  font-family: "Veranda", sans-serif;
+  margin-bottom: 10px;
+  text-align: left;
+  color: #ffffff;
+  text-shadow: 1.4px 2px #000000;
+
+
+
+}
 #chkAcousticness, #chkDanceability, #chkEnergy, #chkLiveness, #chkSpeechiness, #chkValence, #chkTempo, #chkDuration{
   width: 15px;
   height: 15px;
 }
-
 #acousticnessText{
   color: #E11584;
-  text-shadow: 2px 2px #000000;
 }
-
 #danceabilityText{
   color: #2C5499;
-  text-shadow: 2px 2px #000000;
 }
-
 #energyText{
   color: #4F8D23;
-  text-shadow: 2px 2px #000000;
 }
-
 #livenessText{
   color: #E8C917;
-  text-shadow: 2px 2px #000000;
 }
-
 #speechinessText{
   color: #E05D1A;
-  text-shadow: 2px 2px #000000;
 }
-
 #valenceText{
   color: #B9231F;
-  text-shadow: 2px 2px #000000;
 }
-
 #tempoText{
   color: #372780;
-  text-shadow: 2px 2px #000000;
 }
-
 #durationText{
   color: #25A032;
-  text-shadow: 2px 2px #000000;
 }
-
 #acousticnessExplanation{
   color: #E11584;
-  text-shadow: 2px 2px #000000;
+  text-shadow: 1.4px 2px #000000;
 }
-
 #danceabilityExplanation{
   color: #2C5499;
-  text-shadow: 2px 2px #000000;
+  text-shadow: 1.4px 2px #000000;
 }
-
 #energyExplanation{
   color: #4F8D23;
-  text-shadow: 2px 2px #000000;
+  text-shadow: 1.4px 2px #000000;
 }
-
 #livenessExplanation{
   color: #E8C917;
-  text-shadow: 2px 2px #000000;
+  text-shadow: 1.4px 2px #000000;
 }
-
 #speechinessExplanation{
   color: #E05D1A;
-  text-shadow: 2px 2px #000000;
+  text-shadow: 1.4px 2px #000000;
 }
-
 #valenceExplanation{
   color: #B9231F;
   text-shadow: 2px 2px #000000;
 }
-
 #tempoExplanation{
   color: #372780;
   text-shadow: 2px 2px #000000;
 }
-
 #durationExplanation{
   color: #25A032;
   text-shadow: 2px 2px #000000;
-}
-
-#attributesBox{
-  /* background-color: black; */
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-#topSection{
-  /* background-color: black; */
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-#aboutSection{
-  /* background-color: black; */
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-br{
-  display: block; /* makes it have a width */
-  content: ""; /* clears default height */
-  margin-top: 15px; /* change this to whatever height you want it */
-}
-
-a{
-  color: lightblue;
-  text-decoration: none;
 }
